fix(addon-commerce): hide input filler in dark mode

--- a/projects/addon-commerce/components/input-card-grouped/input-card-grouped.style.less
+++ b/projects/addon-commerce/components/input-card-grouped/input-card-grouped.style.less
@@ -117,8 +117,10 @@
         color: var(--tui-text-03-night);
     }
 
-    &_card,
-    :host[data-mode='onDark'] &_card {
+    &&&_card,
+    :host[data-mode='onDark'] &&&_card {
+        // @note: (&&&_) it's increasing css cascade priority
+        /* stylelint-disable selector-max-specificity */
         &:not(.t-input_hidden),
         &:not(.t-input_hidden)::placeholder,
         &:not(.t-input_hidden):-webkit-autofill {
